# 404

./: .gitignore  LICENSE  README.md
Backend/: .env-example  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
Backend/alembic/: env.py
Backend/app/: main.py
Backend/app/api/: auth.py  individuals.py  organizations.py
Backend/app/core/: data.py  database.py  googleAuth.py  redis.py  security.py
Backend/app/models/: __init__.py  activitySegments.py  authToken.py  dataTypes.py  individual.py  organization.py  trips.py  user.py
Backend/app/schemas/: auth.py  individual.py  organization.py
Backend/app/services/: auth.py  individual.py  organization.py
